--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tushe — Foundation of Hausa Intelligence</title>
     <meta name="description" content="Building the foundation of Hausa intelligence through community-powered data" />
