--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     
-    <!-- Favicons - Multiple formats for better browser support -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png?v=2" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png?v=2" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png?v=2" />
-    <link rel="shortcut icon" href="/favicon.ico?v=2" />
+    <!-- Favicons - Tushe branding -->
+    <!-- SVG favicon (modern browsers) - prioritized first to override any cached favicons -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=4" />
+    <link rel="alternate icon" type="image/png" sizes="32x32" href="/favicon.png?v=4" />
+    <link rel="alternate icon" type="image/png" sizes="16x16" href="/favicon.png?v=4" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png?v=4" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?v=4" />
     <link rel="manifest" href="/site.webmanifest" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
